--- a/README
+++ b/README
@@ -2,19 +2,19 @@ garden - A control program for DotSlashGarden
 
 INTRODUCTION
 
-	garden is a control program for DotSlashGarden, an gardening automation project.
-	The goal of DotSlashGarden is to create an indoor hydrogarden that requires
-	little to no human intervention. garden simply allows for the control and
-	customization of the automated systems (i.e. lighting, aeration pumps, pH
-	monitoring). It is meant to be used under Linux and has not been tested
-	with other operating systems.
+	garden is a control program for DotSlashGarden, an automated gardening
+	project. The goal of DotSlashGarden is to create an indoor hydrogarden that
+	requires little to no human intervention. garden simply allows for the 
+	control and	customization of the automated systems (i.e. lighting, aeration
+	pumps, pH monitoring). It is meant to be used under Linux and has not been
+	tested with other operating systems.
 
 NOTE FROM THE AUTHOR
 
-	As much as a cliché this is, this project is, I hate to say, my very first
-	major programming project. Therefore, if you wish to make any changes to it
-	more proper, it would be very much appreciated. The type that would make me
-	redo the entire codebase are especially welcome.
+	As much as this is cliché, garden is, I hate to say, my very first
+	major programming project. Therefore, if you wish to make any changes to
+	make it more proper, it would be very much appreciated. The type that
+	would make me redo the entire codebase are especially welcome.
 
 	I am also really new to this GitHub thing, so there will probably be some
 	weirdness for a while...
